--- a/Health/app/src/main/AndroidManifest.xml
+++ b/Health/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Health"
         tools:targetApi="31">
         <activity
-            android:name=".menu"
+            android:name=".registrar"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
