--- a/Health/app/src/main/AndroidManifest.xml
+++ b/Health/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Health"
         tools:targetApi="31">
         <activity
+            android:name=".registrar_pasiente"
+            android:exported="false" />
+        <activity
+            android:name=".menu_principal"
+            android:exported="false" />
+        <activity
             android:name=".registrar"
             android:exported="false" />
         <activity
