Primer gran push

--- a/Health/app/src/main/AndroidManifest.xml
+++ b/Health/app/src/main/AndroidManifest.xml
@@ -10,10 +10,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Health"
+        android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
-            android:name=".confirmar_paciente"
+            android:name=".gestionarturnos"
+            android:exported="false" />
+        <activity
+            android:name=".Turnos"
             android:exported="false" />
         <activity
             android:name=".registrar_pasiente"
